# MAM4-JAX

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  DEFERRED.md  FEATURES.md  HANDWRITTEN_SOLVER_LIMITATIONS.md  KEY_DECISIONS.md  PLANS.md  PROGRESS.md  REFERENCE_BUILD.md  UPSTREAM_FORTRAN_BUGS.md
mam4-original-src-code/: Makefile  README.md  run_test.csh  version.md
mam4_jax/: __init__.py  _coag_tables.npz  coag.py  config.py  constants.py  data.py  driver.py  kohler.py  newnuc.py  saturation.py  solvers.py
scripts/: benchmark_1000_sims.py  build_reference.sh  capture_reference.py  diffrax_24h_h2so4_only.py  diffrax_24h_plot.py  diffrax_24h_validation.py  extract_coag_tables.py  plot_benchmark_1000sims.py  plot_calcsize_residuals.py  plot_cloudchem_residuals.py  plot_coag_orchestration_residuals.py  plot_driver_trajectory.py  plot_gasaerexch_residuals.py  plot_getcoags_residuals.py  plot_h2so4_only_vs_baseline.py  plot_kohler_residuals.py  plot_makoh_residuals.py  plot_mer07_veh02_residuals.py  plot_newnuc_helpers_residuals.py  plot_newnuc_orchestration_residuals.py  plot_polysvp_residuals.py  plot_qsat_residuals.py  plot_rename_residuals.py  plot_soaexch_residuals.py  plot_sweep_convergence.py  plot_wateruptake_residuals.py
tests/: test_amicphys.py  test_calcsize.py  test_calcsize_transfer.py  test_cloudchem.py  test_coag.py  test_driver.py  test_kohler.py  test_makoh.py  test_newnuc.py  test_polysvp.py  (+6 more)
(+152 files in other folders)
